--- a/preprocessors/packages.tex
+++ b/preprocessors/packages.tex
@@ -1,4 +1,5 @@
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 
 \de{
 	\usepackage[german]{babel}
@@ -6,5 +7,21 @@
 \en{
 	\usepackage[english]{babel}
 }
+
+%
+% Used to style the headers and footers
+\usepackage{fancyhdr}
+
+%
+% Used to format latex generated titles
+\usepackage{titlesec}
+
+%
+% Used for predefining colors to use
+\usepackage{color}
+
+%
+% Used to create a table of acronyms
+\usepackage{acronym}
 
 \usepackage{blindtext}
