--- a/thesis.tex
+++ b/thesis.tex
@@ -1,8 +1,10 @@
-\documentclass[a4paper, 12pt]{report}
+\documentclass[a4paper, 12pt, twoside]{report}
 
 \input preprocessors/localization
 \input preprocessors/packages
+\input preprocessors/colors
 \input preprocessors/properties
+\input preprocessors/page
 
 \begin{document}
 
@@ -10,27 +12,17 @@
 	% Generate a thesis title page
 	\maketitle
 
-
 	%
 	%	FRONT MATTER
-	%
 	\pagenumbering{roman}
-
-
-	%
-	% Include an auto-generated table of contents
-	\tableofcontents
-	\clearpage
-
+	\input matters/front/preface
+	\input matters/front/abstract
+	\input matters/front/tableofcontents
+	\input matters/front/tableofacronyms
 
 	%
 	%	MAIN MATTER
-	%
 	\pagenumbering{arabic}
-
-
-	%
-	% Includes all chapters
 	\input chapters/01-introduction/chapter
 
 \end{document}
