Refactor front matter

--- a/matters/front/tableofacronyms.tex
+++ b/matters/front/tableofacronyms.tex
@@ -1,7 +1,5 @@
-\section*{
-	\de{Abkürzungsverzeichnis}
-	\en{Table of Acronyms}
-}
+\section*{\localized{Abkürzungsverzeichnis}{Table of Acronyms}}
+\mattertoc{\localized{Abkürzungsverzeichnis}{Table of Acronyms}}
 
 \begin{acronym}
 	\acro{imdf}[IMDF]{Indoor Mapping Data Format}
