--- a/preprocessors/localization.tex
+++ b/preprocessors/localization.tex
@@ -3,6 +3,8 @@
 
 \newcommand{\en}[1]{\ifen#1\fi}
 \newcommand{\de}[1]{\ifde#1\fi}
+\newcommand{\localized}[2]{\de{#1}\en{#2}}
+
 
 %
 % Use \detrue to compile into the german version and \entrue to compile into the english version
