--- a/matters/front/preface.tex
+++ b/matters/front/preface.tex
@@ -1,10 +1,5 @@
-\section*{
-	\de{Vorwort}
-	\en{Preface}
-}
-\de{
-	Guten Tag, ich heiße nicht nur Dennis, sondern euch auch herzlich willkommen.
-	Zuerst möchte ich dem Boden danken, ohne den ich hier nicht stehen würde.
-	Außerdem danke ich meinen Armen, die immer an meiner Seite sind.
-}
+\section*{\localized{Vorwort}{Preface}}
+
+\blindtext\\[1ex]\blindtext
+
 \clearpage
