--- a/preprocessors/page.tex
+++ b/preprocessors/page.tex
@@ -25,13 +25,13 @@
 
 %
 % Format the chapter titles
-\titleformat{\chapter}[hang]
-	{\Huge\bfseries}
-	{
-		\thechapter
-		\hspace{20pt}
-		\textcolor{gray75}{|}
-		\hspace{20pt}
-	}
-	{0pt}
-	{\Huge\bfseries}
+\titleformat{\chapter}[hang]%
+	{\Huge\bfseries}%
+	{%
+		\thechapter%
+		\hspace{20pt}%
+		\textcolor{gray75}{|}%
+		\hspace{20pt}%
+	}%
+	{0pt}%
+	{\Huge\bfseries}%
