Refactor thesis cover page

--- a/thesis.tex
+++ b/thesis.tex
@@ -11,9 +11,8 @@
 \begin{document}
 
 	%
-	% Generate a thesis title page
-	\maketitle
-	\clearpage
+	% Include the thesis titlepage
+	\input matters/cover
 
 	%
 	%	FRONT MATTER
