Adjust page margins

--- a/preprocessors/packages.tex
+++ b/preprocessors/packages.tex
@@ -24,6 +24,15 @@
 % Used to create a table of acronyms
 \usepackage{acronym}
 
-\usepackage[]{geometry}
+%
+% Used to define the layout of the pages
+\usepackage[
+	showframe,
+	a4paper,
+	width=150mm,
+	top=30mm,
+	bottom=30mm,
+	bindingoffset=0mm
+]{geometry}
 
 \usepackage{blindtext}
