Include all chapters

--- a/preprocessors/packages.tex
+++ b/preprocessors/packages.tex
@@ -27,7 +27,7 @@
 %
 % Used to define the layout of the pages
 \usepackage[
-	showframe,
+	%showframe, % used to show the frame while debugging
 	a4paper,
 	width=150mm,
 	top=30mm,
