--- a/thesis.tex
+++ b/thesis.tex
@@ -34,6 +34,10 @@
 	\setcounter{page}{\thecurrentpage}
 
 	\input chapters/01-introduction/chapter
+	\input chapters/02-analysis/chapter
+	\input chapters/03-drawing-on-mapping-data/chapter
+	\input chapters/04-implementation/chapter
+	\input chapters/05-conclusion/chapter
 	\clearpage
 	\setcounter{currentpage}{\arabic{page}}
 
