--- a/matters/rear/bibliography.tex
+++ b/matters/rear/bibliography.tex
@@ -1,4 +1,7 @@
 \section*{\localized{Literaturverzeichnis}{Bibliography}}
 \mattertoc{\localized{Literaturverzeichnis}{Bibliography}}
 
+\bibliographystyle{apalike}
+\bibliography{references}
+
 \clearpage
