Add motivation draft

--- a/preprocessors/packages.tex
+++ b/preprocessors/packages.tex
@@ -40,3 +40,14 @@
 %
 % Used for apalike-citations
 \usepackage{apalike}
+
+%
+% Used for SI-Unit rendering
+\usepackage{siunitx}
+	\DeclareSIUnit{\prc}{\text{\%}}
+	\DeclareSIUnit{\mio}{\text{Mio.}}
+	\DeclareSIUnit{\mrd}{\text{Mrd.}}
+
+%
+% Used for linking the table of contents items and references
+\usepackage{hyperref}
