--- a/references.bib
+++ b/references.bib
@@ -1,9 +1,58 @@
 
-@article{JEA01,
+@article{GLA2017,
+  title = {Global Travel Patterns: An Overview},
+  author = {Glaesser, Dirk and Kester, John and Paulose, Hanna and Alizadeh, Abbas and Valentin, Birka},
+  year = {2017},
+  month = apr,
+  volume = {24},
+  issn = {1708-8305},
+  doi = {10.1093/jtm/tax007},
+  url = {https://doi.org/10.1093/jtm/tax007},
+  journal = {Journal of Travel Medicine},
+  number = {4}
+}
+
+@misc{GOO2020,
+  title = {Indoor {{Maps}} Availability \textendash{} {{Google Maps Help}}},
+  author = {Google},
+  year = {2020},
+  url = {https://support.google.com/maps/answer/1685827?hl=en},
+  urldate = {2020-06-21},
+  journal = {Indoor Maps availability \textendash{} Google Maps Help}
+}
+
+@article{JEA2016,
   title = {Map Data Representation for Indoor Navigation a Design Framework towards a Construction of Indoor Map},
   author = {Jeamwatthanachai, Watthanasak and Wald, Mike and Wills, Gary},
-  journaltitle = {2016 International Conference on Information Society (i-Society)},
+  year = {2016},
   url = {https://ieeexplore.ieee.org/abstract/document/7854184},
-  abstract = {A map is a basic component used in a part of navigation in everyday life, which helps people to find information regarding locations, landmarks, and routes. By GPS and online service map e.g. Google maps, navigating outdoors is easier. Inside buildings, however, navigating would not be so easy due to natural characteristics and limitations of GPS, which has led to the creations of indoor navigation system. Even though the indoor navigation systems have been developed for long time, there are still some limitation in accuracy, reliability and indoor spatial information. Navigating inside without indoor spatial information would be a challenge for the users. Regarding the indoor spatial information, a research question has been drawn on finding an appropriate framework towards map data representation of an indoor public spaces and buildings in order to promote indoor navigation for people, robotics, and autonomous systems. This paper has purposed a list of factors and components used towards the design framework for map data representation of indoor public spaces and buildings. The framework, in this paper, has been presented as a form of a multiple-layered model, which each layer designed for a different propose, with object and information classifications.},
+  journal = {2016 International Conference on Information Society (i-Society)},
   keywords = {01}
+}
+
+@book{KOL,
+  title = {Deutschland 4.0 \textendash{} {{Wie}} Die {{Digitale Transformation}} Gelingt},
+  author = {Kollmann, Tobias and Schmidt, Holger},
+  publisher = {{Springer Gabler, Wiesbaden}}
+}
+
+@misc{OES2020,
+  title = {{Apple Maps: Indoor-Karten landen in deutschen Einkaufszentren}},
+  author = {Oestreich, Nicolas},
+  year = {2020},
+  month = feb,
+  url = {https://www.iphone-ticker.de/apple-maps-indoor-karten-landen-in-deutschen-einkaufszentren-153216/},
+  urldate = {2020-06-23},
+  language = {Deutsch}
+}
+
+@misc{PAN2018,
+  title = {The {{Popularity}} of {{Google Maps}}: {{Trends}} in {{Navigation Apps}} in 2018},
+  shorttitle = {The {{Popularity}} of {{Google Maps}}},
+  author = {Panko, Riley},
+  year = {2018},
+  month = jul,
+  url = {https://themanifest.com/mobile-apps/popularity-google-maps-trends-navigation-apps-2018},
+  urldate = {2020-06-23},
+  language = {English}
 }
