--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper, 12pt, twoside]{report}
+\linespread{1.3}
 
 \input preprocessors/localization
 \input preprocessors/packages
