--- a/preprocessors/packages.tex
+++ b/preprocessors/packages.tex
@@ -38,6 +38,11 @@
 \usepackage{blindtext}
 
 %
+% Used for syntax highlighted codes
+\usepackage[outputdir=build]{minted}
+\usemintedstyle{borland}
+
+%
 % Used for bibliography rendering
 \usepackage{csquotes}
 \usepackage[
