--- a/matters/front/tableofacronyms.tex
+++ b/matters/front/tableofacronyms.tex
@@ -2,8 +2,11 @@
 \mattertoc{\localized{Abkürzungsverzeichnis}{Table of Acronyms}}
 
 \begin{acronym}
+	\acro{json}[JSON]{JavaScript Object Notation}
+	\acro{ecma}[ECMA]{European Computer Manufacturers Association}
+	\acro{geojson}[GeoJSON]{Geospatial JavaScript Object Notation}
+
 	\acro{imdf}[IMDF]{Indoor Mapping Data Format}
-	\acro{json}[JSON]{Javascript Object Notation}
 	\acro{mvc}[MVC]{Model-View-Controller}
 \end{acronym}
 
