--- a/preprocessors/packages.tex
+++ b/preprocessors/packages.tex
@@ -41,6 +41,7 @@
 % Used for syntax highlighted codes
 \usepackage[outputdir=build]{minted}
 \usemintedstyle{borland}
+\setminted{fontsize=\small,baselinestretch=1}
 
 %
 % Used for bibliography rendering
