Update listing styling

--- a/preprocessors/packages.tex
+++ b/preprocessors/packages.tex
@@ -1,5 +1,6 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{fontspec}
 
 \de{
 	\usepackage[ngerman]{babel}
@@ -40,8 +41,8 @@
 %
 % Used for syntax highlighted codes
 \usepackage[outputdir=build]{minted}
-\usemintedstyle{borland}
-\setminted{fontsize=\small,baselinestretch=1}
+\usemintedstyle{lovelace}
+\setminted{fontsize=\small,baselinestretch=1,fontfamily=SFMono}
 
 %
 % Used for bibliography rendering
