--- a/preprocessors/definitions.tex
+++ b/preprocessors/definitions.tex
@@ -1,4 +1,13 @@
+%
+% Colors
 \definecolor{gray75}{gray}{0.75}
+\definecolor{gray25}{gray}{0.25}
+
+%
+% Fonts
+\newfontfamily\monaco{SF Mono}[NFSSFamily=SFMono]
+\setmonofont{SF Mono}
+\renewcommand{\theFancyVerbLine}{\monaco\textcolor{gray25}{\scriptsize\oldstylenums{\arabic{FancyVerbLine}}}}
 
 %
 % Inserts a chapter title into the table of contents
@@ -10,7 +19,7 @@
 % Insert a code listing
 \newcommand{\codelisting}[4]{
 	\begin{listing}[ht]
-		\inputminted[obeytabs=true,tabsize=4,linenos,xleftmargin=1em]{#4}{listings/#3}
+		\inputminted[obeytabs=true,tabsize=4,linenos,xleftmargin=1.7em]{#4}{listings/#3}
 		\caption{#1}
 		\label{#2}
 	\end{listing}
