Add custom compile script for faster compiling

--- a/matters/cover.tex
+++ b/matters/cover.tex
@@ -2,9 +2,12 @@
 \maketitle
 \pagestyle{empty}
 
-\localized{Fassung}{Edition} \today
+Fassung \today
 \mbox{}\vfill
-© \the\year{} Dennis Prudlo
-
+\footnotesize{%
+	© \the\year{} Dennis Prudlo\par
+	Bachelorarbeit zur Erlangung des Grades eines Bachelor of Science (B.Sc.)\par
+	mail@dennisprudlo.com
+}
 \restoregeometry
 \clearpage
