--- a/matters/front/tableofacronyms.tex
+++ b/matters/front/tableofacronyms.tex
@@ -1,5 +1,5 @@
-\section*{\localized{Abkürzungsverzeichnis}{Table of Acronyms}}
-\mattertoc{\localized{Abkürzungsverzeichnis}{Table of Acronyms}}
+\chapter*{Abkürzungsverzeichnis}
+\mattertoc{Abkürzungsverzeichnis}
 
 \begin{acronym}
 	\acro{json}[JSON]{JavaScript Object Notation}
