--- a/matters/rear/attachments.tex
+++ b/matters/rear/attachments.tex
@@ -1,4 +1,4 @@
-\section*{\localized{Anhang}{Attachments}}
-\mattertoc{\localized{Anhang}{Attachments}}
+\chapter*{Anhang}
+\mattertoc{Anhang}
 
 \clearpage
