--- a/matters/rear/bibliography.tex
+++ b/matters/rear/bibliography.tex
@@ -1,4 +1,3 @@
-\section*{\localized{Literaturverzeichnis}{Bibliography}}
-\mattertoc{\localized{Literaturverzeichnis}{Bibliography}}
+\mattertoc{Literaturverzeichnis}
 \printbibliography
 \clearpage
