--- a/matters/rear/glossary.tex
+++ b/matters/rear/glossary.tex
@@ -1,4 +1,3 @@
-\section*{\localized{Glossar}{Glossary}}
-\mattertoc{\localized{Glossar}{Glossary}}
-
+\chapter*{Glossar}
+\mattertoc{Glossar}
 \clearpage
