--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,18 @@
 
+@misc{BUT2008,
+  title = {The {{GeoJSON}} Format Specification},
+  author = {Butler, Howard and Daly, Martin and Doyle, Allan and Gillies, Sean and Schaub, Tim and Schmidt, Christopher},
+  year = {2008},
+  month = jun,
+  url = {https://geojson.org/geojson-spec},
+  urldate = {2020-07-04},
+  abstract = {GeoJSON is a geospatial data interchange format based on JavaScript Object Notation (JSON).},
+  copyright = {Copyright \textcopyright{} 2008 by the Authors. This work is licensed under a Creative Commons Attribution 3.0 United States License.},
+  journal = {This document is obsolete. Please see RFC 7946 instead.},
+  language = {English},
+  type = {Specification}
+}
+
 @article{GLA2017,
   title = {Global Travel Patterns: An Overview},
   author = {Glaesser, Dirk and Kester, John and Paulose, Hanna and Alizadeh, Abbas and Valentin, Birka},
@@ -57,8 +71,17 @@
   language = {English}
 }
 
+@misc{WYS2014,
+  title = {Why {{JSON}} Is Better than {{XML}}},
+  author = {Wyse, Josh},
+  year = {2014},
+  month = aug,
+  url = {https://blog.cloud-elements.com/json-better-xml},
+  urldate = {2020-07-04},
+  journal = {Cloud Elements},
+  language = {English}
+}
+
 @misc{zotero-8,
   type = {Misc}
 }
-
-
