Update compile script to set a release flag

--- a/matters/cover.tex
+++ b/matters/cover.tex
@@ -6,7 +6,7 @@ Fassung \today
 \mbox{}\vfill
 \footnotesize{%
 	© \the\year{} Dennis Prudlo\par
-	Bachelorarbeit zur Erlangung des Grades eines Bachelor of Science (B.Sc.)\par
+	Bachelorthesis zur Erlangung des Grades eines Bachelor of Science (B.Sc.)\par
 	mail@dennisprudlo.com
 }
 \restoregeometry
