Configure release version and publish to the local users iCloud

--- a/matters/cover.tex
+++ b/matters/cover.tex
@@ -7,7 +7,7 @@ Fassung \today
 \footnotesize{%
 	© \the\year{} Dennis Prudlo\par
 	Bachelorthesis zur Erlangung des Grades eines Bachelor of Science (B.Sc.)\par
-	mail@dennisprudlo.com
+	Hochschule für Technik und Wirtschaft Berlin
 }
 \restoregeometry
 \clearpage
