--- a/matters/front/abstract.tex
+++ b/matters/front/abstract.tex
@@ -1,3 +1,3 @@
 \chapter*{Abstract}
-TBD
+Das Ziel dieser Bachelorthesis ist es eine benutzerfreundliche und einfach zu bedienende mobile Anwendung zu entwickeln, um Indoor Maps zu kartographieren und für die weitere Verwendung bereitszustellen. Dazu wurden Anforderungen an eine solche Anwendung aufgestellt und die aktuellen Lösungen anhand dieser Anforderungen analysiert um etwaige Probleme zu erkennen.
 \clearpage
