--- a/preprocessors/definitions.tex
+++ b/preprocessors/definitions.tex
@@ -37,7 +37,7 @@
 % Insert a code listing
 \newcommand{\codelisting}[4]{
 	\begin{listing}[ht]
-		\inputminted[fontsize=\footnotesize,obeytabs=true,tabsize=4,linenos,xleftmargin=1.7em]{#4}{listings/#3}
+		\inputminted[fontsize=\scriptsize,obeytabs=true,tabsize=4,linenos,xleftmargin=1.7em]{#4}{listings/#3}
 		\caption{#1}
 		\label{#2}
 	\end{listing}
