Add mobile app types section

--- a/matters/cover.tex
+++ b/matters/cover.tex
@@ -33,9 +33,8 @@ Fassung \today
 \mbox{}\vfill
 \footnotesize{%
 	© \the\year{} \theauthor\par
-}
-\scriptsize{%
-	Bachelorthesis zur Erlangung des Grades eines Bachelor of Science (B.Sc.) an der Hochschule für Technik und Wirtschaft Berlin\par
+	Bachelorthesis zur Erlangung des Grades eines Bachelor of Science (B.Sc.)\\%
+	an der Hochschule für Technik und Wirtschaft Berlin\par
 	Satz: \XeLaTeX \the\eTeXversion\eTeXrevision
 }
 \restoregeometry
