--- a/preprocessors/definitions.tex
+++ b/preprocessors/definitions.tex
@@ -32,6 +32,7 @@
 \DeclareSIUnit{\prc}{\text{\%}}
 \DeclareSIUnit{\mio}{\text{Mio.}}
 \DeclareSIUnit{\mrd}{\text{Mrd.}}
+\DeclareSIUnit{\eur}{\text{€}}
 
 %
 % Insert a code listing
