--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,15 @@
 
+@misc{BAR2013,
+  title = {Blink: {{A}} Rendering Engine for the {{Chromium}} Project},
+  author = {Barth, Adam},
+  year = {2013},
+  month = apr,
+  url = {https://blog.chromium.org/2013/04/blink-rendering-engine-for-chromium.html},
+  urldate = {2020-08-02},
+  journal = {Chromium Blog},
+  language = {English}
+}
+
 @misc{BUT2008,
   title = {The {{GeoJSON}} Format Specification},
   author = {Butler, Howard and Daly, Martin and Doyle, Allan and Gillies, Sean and Schaub, Tim and Schmidt, Christopher},
@@ -11,6 +22,21 @@
   journal = {This document is obsolete. Please see RFC 7946 instead.},
   language = {English},
   type = {Specification}
+}
+
+@article{GEL2019,
+  title = {Qualitative Study of the Incompatibility of Indoor Map File Formats with Location Software Applications},
+  author = {Gelernter, J. and Maheshwari, Nishith},
+  year = {2019},
+  month = aug,
+  volume = {4},
+  pages = {7},
+  issn = {2363-7501},
+  doi = {10.1186/s40965-019-0063-1},
+  url = {https://doi.org/10.1186/s40965-019-0063-1},
+  abstract = {Indoor maps, and therefore the~indoor map data and software that uses them, are used by architects, designers and planners, those in public safety and emergency response, facilities management and even advertising. Presently, the wide range of commonly-used formats for generating indoor maps means that many who would use indoor map applications either must convert indoor map data to another format or re-create the map, which can be time-consuming, costly, and even result in a flawed map. Because the problem is not recognized widely, the benefits that would come from solving it are not widely~considered, and so indoor-map related software is not evolving rapidly.},
+  journal = {Open Geospatial Data, Software and Standards},
+  number = {1}
 }
 
 @article{GLA2017,
@@ -26,6 +52,16 @@
   number = {4}
 }
 
+@misc{GOD2019,
+  title = {Adding {{Indoor Maps}} to Your {{App}} and {{Website}}},
+  author = {Godbillon, Stephane and Kumar, Mithilesh},
+  year = {2019},
+  month = jun,
+  url = {https://developer.apple.com/videos/play/wwdc2019/241/},
+  urldate = {2020-07-14},
+  copyright = {Apple Inc.}
+}
+
 @misc{GOO2020,
   title = {Indoor {{Maps}} Availability \textendash{} {{Google Maps Help}}},
   author = {Google},
@@ -33,6 +69,41 @@
   url = {https://support.google.com/maps/answer/1685827?hl=en},
   urldate = {2020-06-21},
   journal = {Indoor Maps availability \textendash{} Google Maps Help}
+}
+
+@misc{HOA2019,
+  title = {Indoor {{Mapping Data Format}}},
+  author = {Hoather, Michael and Killick, James and Kossovsky, Yuval},
+  year = {2019},
+  month = nov,
+  url = {https://register.apple.com/resources/imdf/},
+  urldate = {2020-07-14},
+  type = {Specification}
+}
+
+@misc{HUR2008,
+  title = {{{AutoCAD}} 1.0 {{December}} 1982},
+  author = {Hurley, Shaan},
+  year = {2008},
+  month = feb,
+  url = {https://autodesk.blogs.com/between_the_lines/ACAD_R1.html},
+  urldate = {2020-07-14},
+  journal = {Between the Lines},
+  language = {English}
+}
+
+@article{HUY2017,
+  title = {Hybrid {{App Approach}}: {{Could}} It Mark the End Native App Domination?},
+  author = {Huynh, Minh and Ghimire, Prashant and Truong, Donny},
+  year = {2017},
+  month = apr,
+  volume = {14},
+  pages = {49--65},
+  doi = {10.28945/3723},
+  url = {https://www.informingscience.org/Publications/3723?Source=\%2FJournals\%2FIISIT\%2FArticles\%3FVolume\%3D14-2017},
+  urldate = {2020-08-02},
+  journal = {2017},
+  number = {Issues in Informing Science and Information Technology}
 }
 
 @article{JEA2016,
@@ -44,10 +115,32 @@
   keywords = {01}
 }
 
+@phdthesis{KEN2012,
+  title = {Are {{Web Apps}} a {{Feasible Alternative}} to {{Native Apps}} in the {{Mobile Environment}}?},
+  author = {Kenny, Fergus},
+  year = {2012},
+  month = jun,
+  abstract = {As the capacity of the mobile web continues to increase with the introduction of new web technologies, a growing number of "non-programming" developers are looking to web-based mobile applications (or "web apps") as an alternative means of creating and deploying content, without the need for code-based programming experience. This paper demonstrates just some of the capabilities of a web-based application built using HTML5 and CSS3. Although this paper focuses on the development process for two web app prototypes built exclusively for the iPhone platform, theoretically, a web application can be presented on other mobile devices with browsers that support HTML5 and CSS3 technologies. It was found that these web apps were capable of producing a comparable standard of user experience as their native application equivalents. The use of the latest web technologies provides "non-programming" developers with a viable alternative for developing apps on mobile devices.},
+  keywords = {3D-transform,application development,Browsers,code-based programming experience,CSS3,CSS3 technologies,Educational institutions,geolocation,Geology,Google,HTML,HTML5,HTML5 technologies,hypermedia markup languages,Internet,iOS,iPhone,iPhone platform,JavaScript,jQuery,Keywords-web apps,mobile,Mobile communication,mobile computing,mobile devices,mobile Web apps,native application equivalents,nonprogrammer native application alternative,nonprogramming developers,object-oriented programming,Prototypes,smart phones,Web technologies,Web-based mobile applications}
+}
+
 @book{KOL,
   title = {Deutschland 4.0 \textendash{} {{Wie}} Die {{Digitale Transformation}} Gelingt},
   author = {Kollmann, Tobias and Schmidt, Holger},
   publisher = {{Springer Gabler, Wiesbaden}}
+}
+
+@inproceedings{LI2019,
+  title = {Survey on {{Indoor Map Standards}} and {{Formats}}},
+  booktitle = {2019 {{International Conference}} on {{Indoor Positioning}} and {{Indoor Navigation}} ({{IPIN}})},
+  author = {Li, Ki-Joune and Zlatanova, Sisi and {Torres-Sospedra}, Joaqu{\'i}n and {Perez-Navarro}, Antoni and Laoudias, Christos and Moreira, Adriano},
+  year = {30 Sept.-3 Oct. 2019},
+  pages = {1--8},
+  doi = {10.1109/IPIN.2019.8911796},
+  url = {https://ieeexplore.ieee.org/abstract/document/8911796},
+  abstract = {With the adoption of indoor positioning solutions, which enable for a variety of location-based spatial services, a number of indoor map standards and formats have been proposed in the last decade. As each of these indoor map standard has its own purpose, the strengths and weaknesses are necessary to be understood and analyzed before selecting one of them for a given application. The Indoor Map Subcommittee has been established under IPIN/ISC in 2017. Among others, the goal of this working group is to compare available indoor map standards, provide a guideline for their application and advise on changes to their standardization development organizations if necessary. In this paper we present a survey of indoor map standards as an achievement of the subcommittee. The scope of the survey covers official standards such as IFC of BuildingSmart, IndoorGML and CityGML of OGC, and Indoor OpenStreetMap. We present several use-cases to show and discuss how to build indoor maps.},
+  isbn = {2471-917X},
+  keywords = {Buildings,BuildingSmart,CityGML,Data models,Encoding,geographic information systems,IFC,indoor map formats,indoor map standard,indoor map standards,Indoor Map Subcommittee,Indoor navigation,Indoor OpenStreetMap,indoor positioning,indoor radio,IndoorGML,mobile computing,OGC,standards,Standards,Three-dimensional displays,Two dimensional displays}
 }
 
 @misc{OES2020,
@@ -60,6 +153,16 @@
   language = {Deutsch}
 }
 
+@misc{OPE2020,
+  title = {Indoor {{Mapping Data Format}} ({{IMDF}}) {{Candidate Community Standard Work Item Justification}}},
+  author = {{Open Geospatial Consortium}},
+  year = {2020},
+  month = feb,
+  url = {https://www.ogc.org/standards/requests/202},
+  urldate = {2020-07-14},
+  journal = {Indoor Mapping Data Format (IMDF) Candidate Community Standard Work Item Justification}
+}
+
 @misc{PAN2018,
   title = {The {{Popularity}} of {{Google Maps}}: {{Trends}} in {{Navigation Apps}} in 2018},
   shorttitle = {The {{Popularity}} of {{Google Maps}}},
@@ -68,6 +171,48 @@
   month = jul,
   url = {https://themanifest.com/mobile-apps/popularity-google-maps-trends-navigation-apps-2018},
   urldate = {2020-06-23},
+  language = {English}
+}
+
+@misc{PIC2008,
+  title = {A Fresh Take on the Browsers},
+  author = {Pichai, Sundar},
+  year = {2008},
+  month = sep,
+  url = {https://googleblog.blogspot.com/2008/09/fresh-take-on-browser.html},
+  urldate = {2020-08-02},
+  journal = {Official Google Blog},
+  language = {English}
+}
+
+@misc{RED2016,
+  title = {What Is {{Browser Support}}?},
+  author = {Redfern, Dave},
+  year = {2016},
+  month = nov,
+  url = {https://www.iweb.co.uk/2016/11/what-is-browser-support/},
+  urldate = {2020-08-02},
+  language = {English}
+}
+
+@misc{STA2020,
+  title = {Mobile {{Browser Market Share Worldwide}} |~{{StatCounter Global Stats}}},
+  shorttitle = {Mobile {{Browser Market Share Worldwide}}},
+  author = {{StatCounter Global Stats}},
+  year = {2020},
+  url = {https://gs.statcounter.com/browser-market-share/mobile/worldwide/\#monthly-201906-202007-bar},
+  urldate = {2020-08-02},
+  journal = {Statistics}
+}
+
+@misc{TOR2020,
+  title = {Progressive {{Web Apps}} Still Have a Long Way to Go},
+  author = {Torres, Juan Carlos},
+  year = {2020},
+  month = jul,
+  url = {https://www.slashgear.com/progressive-web-apps-still-have-a-long-way-to-go-17629387/},
+  urldate = {2020-08-02},
+  journal = {SlashGear},
   language = {English}
 }
 
