--- a/matters/front/tableofacronyms.tex
+++ b/matters/front/tableofacronyms.tex
@@ -7,6 +7,8 @@
 	\acro{imdf}[IMDF]{Indoor Mapping Data Format}
 	\acro{json}[JSON]{JavaScript Object Notation}
 	\acro{mvc}[MVC]{Model-View-Controller}
+	\acro{sdk}[SDK]{Software Development Kit}
+	\acro{uuid}[UUID]{Universally Unique Identifier}
 \end{acronym}
 
 \clearpage
